--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="RealSync - Remote Hardware-in-the-Loop Testing Solutions" />
     <meta property="og:description" content="Connect real-time simulators to remote hardware devices with RealSync's innovative gateway technology." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://github.com/Real-Sync/realsync_web/blob/gh-pages/back.png?raw=true" />
+
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@realsync" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
+    <meta name="twitter:image" content="https://github.com/Real-Sync/realsync_web/blob/gh-pages/back.png?raw=true" />    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
   </head>
 
   <body>
